--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,4 +1,13 @@
 /* src/assets/styles/index.css */
+
+.header {
+  font-family: 'Courier New', Courier, monospace; /* Exemplo de fonte */
+  text-align: center;
+  padding: 20px 0;
+  color: black;
+  font-size: 1.5em;
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -14,7 +23,7 @@ body {
 
 h1 {
   text-align: center;
-  font-size: 3em; /* Aumenta a fonte em 0.5x */
+  font-size: 2em; /* Aumenta a fonte em 0.5x */
 }
 
 .nav-buttons {
@@ -73,4 +82,12 @@ button[type="submit"] {
 
 button[type="submit"]:hover {
   background-color: #0056b3;
+}
+
+.footer {
+  text-align: center;
+  padding: 10px 0;
+  background-color: #f4f4f4;
+  color: #333;
+  font-style: italic; /* Texto em itálico */
 }
