--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -62,22 +62,34 @@ h1 {
 }
 
 .listas-vagas li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin-bottom: 10px;
-  padding: 10px;
+  padding: 15px;
   background-color: #ffffff;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
 
+.listas-vagas .vaga-info {
+  flex-grow: 1;
+}
+
 .listas-vagas button {
   margin-left: 10px;
-  padding: 5px 10px;
+  padding: 1px 3px;
   font-size: 14px;
   background-color: #ff4d4d;
   color: white;
   border: none;
   cursor: pointer;
   border-radius: 4px;
+}
+
+.listas-vagas .ocupada {
+  color: red; 
+  cursor: pointer;
 }
 
 .listas-vagas button:hover {
